maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: expected class or object definition
def aMurSud(x:Int,y:Int) : Boolean = {
^JediEscaper:64: error: expected class or object definition
def aMurEst(x:Int,y:Int) : Boolean = {
^JediEscaper:74: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:75: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:76: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:77: error: Unmatched closing brace '}' ignored here
}
^